rules.v4
# Generated by iptables-save v1.4.21 on Sun Dec 20 23:27:48 2015
*filter
:INPUT ACCEPT [14935:1868599]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14771:1882538]
:Prebanned - [0:0]
:Allowed - [0:0]
:Postbanned - [0:0]

##########################
# Required Rules
##########################
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT

##########################
# Pre (Allowed) Banned Rules
##########################
# Used to explicitly ban IP's before hitting the allowed section
-A Prebanned -j Allowed

##########################
# Post (Allowed) Banned Rules
##########################
# Reject anything not accepted already
-A Postbanned ! -s 192.168.0.0/16 -j REJECT --reject-with icmp-host-unreachable
-A Postbanned -j RETURN

##########################
# Allowed Rules
##########################
-A INPUT -j Prebanned

# Allowed Networks

# IANA Private Ranges
# IANA Private 10/8
-A Allowed -s 10.0.0.0/8 -j ACCEPT
# IANA Private 192.168/16
-A Allowed -s 192.168.0.0/16 -j ACCEPT
# IANA Private 172.16/12
-A Allowed -s 172.16.0.0/12 -j ACCEPT

#
# IP Block ACLs
#

# Vultr
-A Allowed -s 45.77.200.160 -j ACCEPT
# Lighsail
-A Allowed -s 107.21.174.32 -j ACCEPT
# Virmach
-A Allowed -s 107.173.181.215 -j ACCEPT
# Alibaba
-A Allowed -s 8.210.168.34 -p tcp --match multiport --dports 22,80,443,3128,2049 -j ACCEPT

# OOL
#-A Allowed -s 66.112.0.0/16 -p tcp --match multiport --dports 22,80,443,3128 -j ACCEPT
#-A Allowed -s 68.195.0.0/16 -p tcp --match multiport --dports 22,80,443,3128 -j ACCEPT
#-A Allowed -s 68.198.0.0/16 -p tcp --match multiport --dports 22,80,443,3128 -j ACCEPT

# Stony Brook (Various)
# Infosec
-A Allowed -s 129.49.31.0/24 -j ACCEPT
# Main Campus
# -A Allowed -s 129.49.0.0/16 -j ACCEPT
# Computer Science (Various)
# -A Allowed -s 130.245.0.0/16 -j ACCEPT
# Other Ranges
# 192.12.89.0/24
# 192.12.90.0/24
# 192.42.55.0/24

# Allowed Ports
-A Allowed -p tcp -m tcp --dport 22 -j ACCEPT

# Multiport Example
-A Allowed -s 45.77.200.160 -p tcp --match multiport --dports 22,80,443,3128 -j ACCEPT

# Squid Proxy
# -A Allowed -p tcp -m tcp --dport 3128 -j ACCEPT
# HTTP/HTTPs
# -A Allowed -p tcp -m tcp --dport 80 -j ACCEPT
# -A Allowed -p tcp -m tcp --dport 443 -j ACCEPT
# Typical Netcat port
# -A Allowed -p tcp -m tcp --dport 5000 -j ACCEPT
# TCP and UDP Examples
# -A Allowed -p tcp -m tcp --dport 1514 -j ACCEPT
# -A Allowed -p udp -m udp --dport 1514 -j ACCEPT

-A Allowed -j Postbanned
-A Allowed -j RETURN

COMMIT
# Completed on Sun Dec 20 23:27:48 2015
